Worked on layout issue with the highlight section

--- a/css/adopt-page.css
+++ b/css/adopt-page.css
@@ -62,14 +62,24 @@
 }
 
 .highlight-container {
+    width: 100%;
+    padding: 0 50px 0;
+}
+
+.highlight-section {
     width: 90%;
-    margin: 0 auto;
     display: flex;
+    margin: 0 auto;
+}
+
+.highlight-section h3 {
+    text-align: center;
+    padding: 30px 0;
 }
 
 .highlight-img {
     background-image: url("../images/highlight-img.jpg");
-    width: 60%;
+    width: 30%;
     height: 70vh;
 }
 
